# webscanjust4me

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Readme.md  clean.py  config.yaml  honey.py  main.py  proxies.txt  pyproject.toml  requirements.txt
Payloads/SQLI/: Comment_Based_SQLi_Payloads.txt  DNS_Exfiltration_SQLi_Payloads.txt  Hybrid_SQLi_Payloads.txt  OOB_SQLi_Payloads.txt  Second_Order_SQLi_Payloads.txt  Stacked_Queries_SQLi_Payloads.txt  Time_Based_SQLi_Payloads.txt  Union_Based_SQLi_Payloads.txt  WAF_Bypass_SQLi_Payloads.txt
honey_scanner/: __init__.py  cli.py
honey_scanner/antiban/: __init__.py  limiter.py  proxy.py
honey_scanner/core/: __init__.py  config.py  engine.py  fingerprint.py  paths.py  scanner.py
honey_scanner/detection/: __init__.py  analyzers.py  csrf.py  verifier.py
honey_scanner/reporting/: __init__.py  reporter.py
honey_scanner/resources/payloads/SQLI/: Boolean_Based_SQLi_Payloads.txt  Error_Based_SQLi_Payloads.txt  Stored_Procedure_SQLi_Payloads.txt
